--- a/FireMapper/FireMapper.csproj
+++ b/FireMapper/FireMapper.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\FireSource\FireSource.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
