--- a/App/App.csproj
+++ b/App/App.csproj
@@ -15,7 +15,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
 </Project>
