--- a/FireMapper/FireMapper.csproj
+++ b/FireMapper/FireMapper.csproj
@@ -9,7 +9,8 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
 </Project>
