feat: add key, new solution and save modules when SAVE_MODULES env variable is set

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -17,6 +17,16 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net48</TargetFramework>
     <LangVersion>9.0</LangVersion>
+    <StartupObject>App.Program</StartupObject>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <Content Include="Resources\ave-campo-ferias-firebase-adminsdk-m26up-d31998ef53.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\isel-AVE-2021.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
